2004-12-27 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20041228

2004-07-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/i_vars.h, prototype.h, gschlas/g_rc.c, g_register.c,
	gschlas.c, i_vars.c: Removed a whole bunch of rc related code.
	The removed code was moved into libgeda.

        * configure.ac: Updated version to 20040710
	
2004-01-17 Ales Hvezda   <ahvezda@geda.seul.org>

        * config.h.in: Remove machine generated file.

2004-01-12 Ales Hvezda   <ahvezda@geda.seul.org>

	* scripts/Makefile.am: Changed the sed command when building garchive
	to work with more sed versions hopefully.  

2004-01-11 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20040111

	* src/gsch2pcb.c, examples/gsch2pcb/project.sample: Upgraded to 
	Bill Wilson's latest version (1.4) (1.3 skipped)

	* Makefile.am: Oops forgot to remove references to the README.* 
	files when they were moved, so make dist broke.  Fixed.

2004-01-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* docs/Makefile.am: Changed doc install directory readme to readmes

2004-01-03 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/gsch2pcb.c, examples/gsch2pcb/project.sample: Upgraded to 
	Bill Wilson's latest version (1.2)

	* scripts/gsymupdate: Found a last minute critical bug which
	caused gschem/gschlas to assert because a text field (the number
	of lines) wasn't being set on split text lines.  gsymupdate does
	not really handle multi line text items.  A bug needs to be
	filed for this so it is not forgotten about.

2004-01-01 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Added --with-docdir command line flag as well all
        the code to support installing documentation.  Also added a prog
        check for groff.

	* docs/README.*: Moved all the readmes into the docs subdirectory.

	* docs/Makefile.am: Added code to install all the readme files
        into the documentation directory.  
